# gammarips-engine

./: .gitignore  CHEAT-SHEET.md  CLAUDE.md  NEXT_SESSION_PROMPT.md  README.md  requirements.txt
.gemini/: GEMINI.MD
.scratch/: edge_discovery_finding_2026-07-01.txt  gigo_flow_index_feasibility_2026-07-01.md  judge_v6.md  substrate_readiness_audit_2026-07-01.md
agent-arena/: Dockerfile  agents.py  deploy.sh  main.py
backtesting_and_research/: 2026-05-19_trailing_liquidity_backtest.py  2026-05-27_active_day_volume_floor.py  analyze_premium_winners.py  entry_timing_backtest.py  entry_timing_fill_realism.py  exit_design_study.py  exit_velocity_sweep.py  fetch_hold_window_bars.py  fetch_option_minute_bars.py  fetch_underlying_daily_bars.py  gate_recall.py  gate_validity_checks.py  liquidity_correlation.py  moneyness_band_study.py  premium_affordability_study.py  probe_sweep_feasibility.py  realized_option_label.py  score_vs_option_return_pilot.py  score_vs_option_return_pilot_part2.py  sweep_v4_eod.py  sweep_v4_limits.py  sweep_v5_liquidity.py  sweep_v6_structural_sniper.py  v4_backtest.py  v4_bracket_sim.py
blog-generator/: .gitignore  DESIGN_SPEC.md  Dockerfile  Makefile  README.md  deploy.sh  pyproject.toml
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt-runner/: .gcloudignore  Dockerfile  README.md  deploy.sh  main.py  requirements.txt
docs/: ARCHITECTURE.md  DATA-CONTRACTS.md  EVAL-SYSTEM.md  EVAL-TURN-ON.md  GLOSSARY.md  LAUNCH-DAY-2026-04-21.md  MODELS.md  TESTING.md  TRADING-STRATEGY.md  deploy-all-cloud-run.sh
enrichment-trigger/: deploy.sh  main.py  requirements.txt
enrichment-trigger-v4/: Dockerfile  deploy.sh  main.py  requirements.txt
forward-paper-trader/: benchmark_context.py  deploy.sh  main.py  requirements.txt
forward-paper-trader-v4/: deploy.sh  main.py
gammarips-eval/: Dockerfile  config.yaml  deploy.sh  main.py  report.py  requirements.txt  runner.py
libs/gammarips_content/: pyproject.toml
libs/gammarips_content/gammarips_content/: __init__.py  brand.py  compliance.py  firestore_helpers.py  mcp_client.py  tweepy_helper.py  voice_rules.py
libs/trace_logger/: pyproject.toml
libs/trace_logger/trace_logger/: __init__.py  logger.py  pricing.py  records.py
overnight-report-generator/: Dockerfile  deploy.sh  main.py  market_context.py
reddit-poster/: Dockerfile  deploy.sh  pyproject.toml
reddit-poster/app/: compliance.py  fast_api_app.py  templates.py  tools.py
reddit-poster/tests/: test_templates.py
scripts/: backfill_v4_features.py  dbt_docs.sh
signal-judge/: .gcloudignore  Dockerfile  deploy.sh  pyproject.toml
signal-judge/app/: agent.py  fast_api_app.py  schemas.py  tools.py
signal-judge/case_memory/: bull.md  exemplars.md  quant.md
signal-judge/prompts/: picker_v5.md  scorer_v1.md  scorer_v3.md
signal-judge/tests/unit/: test_smoke.py
signal-notifier/: Dockerfile  deploy.sh  main.py  requirements.txt
signal-ranker/: .gitignore  Dockerfile  deploy.sh
win-tracker/: deploy.sh  main.py
(+253 files in other folders)
