[project]
name = "reddit-poster"
version = "0.1.0"
description = "Minimal Reddit auto-poster for trade ideas + pnl receipts."
authors = [
    {name = "GammaRips", email = "evan@gammarips.com"},
]
dependencies = [
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn~=0.34.0",
    "gunicorn>=22.0",
    "praw>=7.7,<8.0",
    "pydantic>=2.0,<3.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=2.18",
    "google-cloud-logging>=3.12.0,<4.0.0",
]
requires-python = ">=3.12,<3.14"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
